{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 67,
  "lineage": "c88f51ac-4bed-1af3-79b9-2c872503dea1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-04590631806303ae7",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0da7cbe8b10ac2f1e"
            ],
            "tags": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-tgw",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-tgw",
              "Owner": "team-devops"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-03fa87a217f52008c",
            "vpc_id": "vpc-06e270f6fd1138f8f",
            "vpc_owner_id": "779527285137"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_route_table_association.association",
            "module.subnets.aws_subnet.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b4dea809cb974b473854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b4dea809cb974b47",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-03fa87a217f52008c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_route_table_association.association",
            "module.subnets.aws_subnet.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0daef57cd71dd2fed3854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0daef57cd71dd2fed",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-03fa87a217f52008c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_route_table_association.association",
            "module.subnets.aws_subnet.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07e47e5d5e66fda333854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e47e5d5e66fda33",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-03fa87a217f52008c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_route_table_association.association",
            "module.subnets.aws_subnet.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_sg_for_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:security-group/sg-05dad1fc75bd24245",
            "description": "Security Group VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dad1fc75bd24245",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_for_vpc_endpoint",
            "name_prefix": "",
            "owner_id": "779527285137",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-endpoint-sg",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-endpoint-sg",
              "Owner": "team-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:vpc/vpc-06e270f6fd1138f8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00108d4746bc56fd5",
            "default_route_table_id": "rtb-0a3dfbdae3aec406d",
            "default_security_group_id": "sg-0f597113981d95f95",
            "dhcp_options_id": "dopt-a955bfc2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e270f6fd1138f8f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3dfbdae3aec406d",
            "owner_id": "779527285137",
            "tags": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-vpc",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-vpc",
              "Owner": "team-devops"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway-endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:vpc-endpoint/vpce-0a62475fa066e7ba5",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "id": "vpce-0a62475fa066e7ba5",
            "owner_id": "779527285137",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07e47e5d5e66fda33",
              "rtb-0b4dea809cb974b47",
              "rtb-0daef57cd71dd2fed"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "state": "available",
            "tags": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-gateway-endpoint",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-gateway-endpoint",
              "Owner": "team-devops"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_route_table_association.association",
            "module.subnets.aws_subnet.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:vpc-endpoint/vpce-01356d0e1f61c713b",
            "cidr_blocks": [
              "35.71.100.0/25",
              "35.71.100.128/26",
              "52.94.20.0/24"
            ],
            "id": "vpce-01356d0e1f61c713b",
            "owner_id": "779527285137",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-66a7420f",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07e47e5d5e66fda33",
              "rtb-0b4dea809cb974b47",
              "rtb-0daef57cd71dd2fed"
            ],
            "service_name": "com.amazonaws.ap-south-1.dynamodb",
            "state": "available",
            "tags": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-gateway-endpoint",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-gateway-endpoint",
              "Owner": "team-devops"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_route_table_association.association",
            "module.subnets.aws_subnet.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface-endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:vpc-endpoint/vpce-04152c5869264d535",
            "dns_entry": [
              {
                "dns_name": "vpce-04152c5869264d535-kc9qu7gp.ec2.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-04152c5869264d535-kc9qu7gp-ap-south-1a.ec2.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ec2.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z03193322VEME4T1APVR7"
              },
              {
                "dns_name": "ec2.ap-south-1.api.aws",
                "hosted_zone_id": "Z06878891ED8KDLM1X4BQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04152c5869264d535",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0052d688c1c59acdd"
            ],
            "owner_id": "779527285137",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05dad1fc75bd24245"
            ],
            "service_name": "com.amazonaws.ap-south-1.ec2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.52",
                "subnet_id": "subnet-0da7cbe8b10ac2f1e"
              }
            ],
            "subnet_ids": [
              "subnet-0da7cbe8b10ac2f1e"
            ],
            "tags": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-interface-ep-1",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-interface-ep-1",
              "Owner": "team-devops"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "dependencies": [
            "aws_security_group.default_sg_for_vpc_endpoint",
            "aws_vpc.main",
            "aws_vpc_endpoint.gateway-endpoint",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_route_table_association.association",
            "module.subnets.aws_subnet.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:vpc-endpoint/vpce-066a3db6346bfd5fe",
            "dns_entry": [
              {
                "dns_name": "vpce-066a3db6346bfd5fe-xkeslb61.ssm.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-066a3db6346bfd5fe-xkeslb61-ap-south-1a.ssm.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ssm.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z07855323P8IL8F7YTOLS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-066a3db6346bfd5fe",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06c55220b45ad7433"
            ],
            "owner_id": "779527285137",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05dad1fc75bd24245"
            ],
            "service_name": "com.amazonaws.ap-south-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.163",
                "subnet_id": "subnet-0da7cbe8b10ac2f1e"
              }
            ],
            "subnet_ids": [
              "subnet-0da7cbe8b10ac2f1e"
            ],
            "tags": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-interface-ep-2",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-my-vpc-project-interface-ep-2",
              "Owner": "team-devops"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "dependencies": [
            "aws_security_group.default_sg_for_vpc_endpoint",
            "aws_vpc.main",
            "aws_vpc_endpoint.gateway-endpoint",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_route_table_association.association",
            "module.subnets.aws_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"endpoint\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.subnets[\"endpoint\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:route-table/rtb-0b4dea809cb974b47",
            "id": "rtb-0b4dea809cb974b47",
            "owner_id": "779527285137",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "dev-endpoint-subnet-route-table",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-endpoint-subnet-route-table",
              "Owner": "team-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"endpoint\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06774e3c12a032328",
            "route_table_id": "rtb-0b4dea809cb974b47",
            "subnet_id": "subnet-0da7cbe8b10ac2f1e"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"endpoint\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:subnet/subnet-0da7cbe8b10ac2f1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da7cbe8b10ac2f1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779527285137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "dev-endpoint-subnet-subnet",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-endpoint-subnet-subnet",
              "Owner": "team-devops"
            },
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"private-1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.subnets[\"private-1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:route-table/rtb-0daef57cd71dd2fed",
            "id": "rtb-0daef57cd71dd2fed",
            "owner_id": "779527285137",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "dev-private-subnet-1-route-table",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-private-subnet-1-route-table",
              "Owner": "team-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"private-1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c226f352ef5a3089",
            "route_table_id": "rtb-0daef57cd71dd2fed",
            "subnet_id": "subnet-0fca8c4dd9b246721"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"private-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:subnet/subnet-0fca8c4dd9b246721",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fca8c4dd9b246721",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779527285137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "dev-private-subnet-1-subnet",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-private-subnet-1-subnet",
              "Owner": "team-devops"
            },
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"public-1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.subnets[\"public-1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:route-table/rtb-07e47e5d5e66fda33",
            "id": "rtb-07e47e5d5e66fda33",
            "owner_id": "779527285137",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "dev-public-subnet-1-route-table",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-public-subnet-1-route-table",
              "Owner": "team-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"public-1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd7bdf93b091197a",
            "route_table_id": "rtb-07e47e5d5e66fda33",
            "subnet_id": "subnet-0cbf0eeef03735287"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main",
            "module.subnets.aws_route_table.main",
            "module.subnets.aws_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"public-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:779527285137:subnet/subnet-0cbf0eeef03735287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbf0eeef03735287",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779527285137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "dev-public-subnet-1-subnet",
              "Owner": "team-devops"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-public-subnet-1-subnet",
              "Owner": "team-devops"
            },
            "vpc_id": "vpc-06e270f6fd1138f8f"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.main"
          ]
        }
      ]
    }
  ]
}